virtualservice.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: bookinfo
spec:
  hosts:
  - "*"
  gateways:
  - bookinfo-gateway
  http:
  - match:
    - uri:
        prefix: /productpage
    # rewrite:
    #   uri: "/vterry/istio-poc/main/oam-server-a.txt"
    #   authority: raw.githubusercontent.com
    route:
    - destination:
        host: productpage
        port:
          number: 9080
    # - destination:
    #     host: raw.githubusercontent.com
    #     port:
    #       number: 443
